# gersemi: off
# src/beman/execution/CMakeLists.txt -*-makefile-*-
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# gersemi: on

add_library(${TARGET_NAME} INTERFACE)
add_library(beman::execution_headers ALIAS ${TARGET_NAME})

target_sources(
    ${TARGET_NAME}
    PUBLIC
        FILE_SET public_headers
            TYPE HEADERS
            BASE_DIRS ${PROJECT_SOURCE_DIR}/include
            FILES
                ${PROJECT_SOURCE_DIR}/include/beman/execution/execution.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/functional.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/stop_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution26/execution.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution26/stop_token.hpp
    PUBLIC
        FILE_SET detail_headers
            TYPE HEADERS
            BASE_DIRS ${PROJECT_SOURCE_DIR}/include
            FILES
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/affine_on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/allocator_aware_move.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/almost_scheduler.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/apply_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/as_awaitable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/as_except_ptr.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/as_tuple.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/associate.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/atomic_intrusive_stack.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/await_result_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/await_suspend_result.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/awaitable_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/basic_operation.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/basic_receiver.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/basic_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/basic_state.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/bulk.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/call_result_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/callable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/check_type_alias_exist.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/child_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/class_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/common.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_domain.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_signature.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_signatures.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_signatures_for.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_signatures_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/completion_tag.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/connect.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/connect_all.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/connect_all_result.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/connect_awaitable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/connect_result_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/continues_on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/counting_scope.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/counting_scope_base.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/counting_scope_join.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/decayed_same_as.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/decayed_tuple.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/decayed_type_list.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/decayed_typeof.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/decays_to.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/default_domain.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/default_impls.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/emplace_from.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/env_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/env_promise.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/env_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/error_types_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/forward_like.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/forwarding_query.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/fwd_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/gather_signatures.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_allocator.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_awaiter.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_completion_scheduler.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_completion_signatures.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_delegation_scheduler.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_domain.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_domain_early.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_domain_late.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_scheduler.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/get_stop_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/has_as_awaitable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/has_completions.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/immovable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/impls_for.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/indices_for.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/indirect_meta_apply.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/inplace_stop_source.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/into_variant.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/intrusive_stack.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/is_awaitable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/is_awaiter.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/join_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/just.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/let.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/make_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/make_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/matching_sig.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_combine.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_contain_same.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_contains.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_filter.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_prepend.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_size.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_to.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_transform.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/meta_unique.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/movable_value.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/nested_sender_has_affine_on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/never_stop_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/non_assignable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/nostopstate.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/nothrow_callable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/notify.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/on_stop_request.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/operation_state.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/operation_state_task.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/product_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/prop.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/query_with_default.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/queryable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/read_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/receiver.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/receiver_of.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/run_loop.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sched_attrs.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sched_env.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/schedule.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/schedule_from.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/schedule_result_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/scheduler.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/scheduler_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/scope_association.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/scope_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_adaptor.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_adaptor_closure.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_awaitable.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_decompose.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_for.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_has_affine_on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sender_in.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sends_stopped.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/set_error.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/set_stopped.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/set_value.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/simple_allocator.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/simple_counting_scope.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/single_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/single_sender_value_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/spawn.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/spawn_future.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/spawn_get_allocator.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/split.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/start.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/starts_on.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/state_type.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stop_callback_for_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stop_source.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stop_token_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stop_when.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stoppable_source.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/stoppable_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/suppress_pop.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/suppress_push.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/suspend_complete.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/sync_wait.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/tag_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/then.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/transform_sender.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/type_list.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/unspecified_promise.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/unstoppable_token.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/valid_completion_for.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/valid_completion_signatures.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/valid_specialization.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/value_types_of_t.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/variant_or_empty.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/when_all.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/when_all_with_variant.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/with_await_transform.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/with_awaitable_senders.hpp
                ${PROJECT_SOURCE_DIR}/include/beman/execution/detail/write_env.hpp
)

if(BEMAN_USE_MODULES)
    target_sources(
        ${TARGET_PREFIX}
        PRIVATE
            execution.cpp # TODO(CK): check if really needed!
        PUBLIC
            FILE_SET CXX_MODULES
                BASE_DIRS ${PROJECT_SOURCE_DIR}/src/beman/execution
                FILES
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/execution.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/execution-detail.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/affine_on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/allocator_aware_move.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/almost_scheduler.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/apply_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/as_awaitable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/as_except_ptr.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/as_tuple.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/associate.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/atomic_intrusive_stack.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/await_result_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/await_suspend_result.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/awaitable_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/basic_operation.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/basic_receiver.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/basic_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/basic_state.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/bulk.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/call_result_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/callable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/check_type_alias_exist.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/child_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/class_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_domain.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_signature.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_signatures_for.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_signatures_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_signatures.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/completion_tag.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/connect_all_result.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/connect_all.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/connect_awaitable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/connect_result_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/connect.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/continues_on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/counting_scope_base.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/counting_scope_join.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/counting_scope.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/decayed_same_as.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/decayed_tuple.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/decayed_type_list.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/decayed_typeof.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/decays_to.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/default_domain.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/default_impls.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/emplace_from.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/env_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/env_promise.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/env_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/error_types_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/forward_like.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/forwarding_query.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/fwd_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/gather_signatures.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_allocator.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_awaiter.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_completion_scheduler.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_completion_signatures.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_delegation_scheduler.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_domain_early.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_domain_late.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_domain.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_scheduler.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/get_stop_token.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/has_as_awaitable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/has_completions.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/immovable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/impls_for.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/indices_for.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/indirect_meta_apply.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/inplace_stop_source.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/into_variant.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/intrusive_stack.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/is_awaitable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/is_awaiter.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/join_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/just.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/let.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/make_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/make_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/matching_sig.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_combine.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_contains.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_contain_same.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_filter.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_prepend.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_size.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_to.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_transform.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/meta_unique.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/movable_value.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/nested_sender_has_affine_on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/never_stop_token.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/notify.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/non_assignable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/nostopstate.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/nothrow_callable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/on_stop_request.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/operation_state_task.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/operation_state.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/product_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/prop.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/query_with_default.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/queryable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/read_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/receiver_of.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/receiver.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/run_loop.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sched_attrs.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sched_env.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/schedule_from.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/schedule_result_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/schedule.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/scheduler_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/scheduler.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/scope_token.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_adaptor_closure.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_adaptor.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_awaitable.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_decompose.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_for.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_has_affine_on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender_in.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sends_stopped.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/set_error.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/set_stopped.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/set_value.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/simple_allocator.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/simple_counting_scope.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/single_sender_value_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/single_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/spawn_future.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/spawn_get_allocator.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/spawn.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/split.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/start.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/starts_on.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/state_type.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stop_callback_for_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stop_source.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stop_token_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stop_when.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stoppable_source.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/stoppable_token.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/suspend_complete.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/sync_wait.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/tag_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/then.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/transform_sender.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/type_list.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/unspecified_promise.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/unstoppable_token.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/valid_completion_for.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/valid_completion_signatures.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/valid_specialization.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/value_types_of_t.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/variant_or_empty.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/when_all_with_variant.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/when_all.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/with_await_transform.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/with_awaitable_senders.cppm
                    ${PROJECT_SOURCE_DIR}/src/beman/execution/write_env.cppm
    )
    target_link_libraries(${TARGET_PREFIX} PUBLIC ${TARGET_NAME})
endif()

get_property(
    DETAIL_HEADER_FILES
    TARGET ${TARGET_NAME}
    PROPERTY HEADER_SET_detail_headers
)
source_group("Header Files\\detail" FILES ${DETAIL_HEADER_FILES})

set_target_properties(${TARGET_NAME} PROPERTIES VERIFY_INTERFACE_HEADER_SETS ON)
